#Makefile.am,v 1.5 2000/12/02 22:08:37 mrsam Exp
#
# Copyright 2000-2001 Double Precision, Inc.  See COPYING for
# distribution information.

CLEANFILES=filelist

IMAGES= \
	bg.png \
	bluebottomleft.png \
	bluebottomright.png \
	bluetopleft.png \
	bluetopright.png \
	calendar.png \
	cancel.png \
	eventadd.png \
	eventedit.png \
	first.png \
	folder2.png \
	folder.png \
	folders.png \
	forwardatt.png \
	forward.png \
	fullheaders.png \
	graybottomleft.png \
	graybottomright.png \
	graytopleft.png \
	graytopright.png \
	key.png \
	last.png \
	left2.png \
	left.png \
	logo.png \
	print.png \
	replyall.png \
	replylist.png \
	reply.png \
	right2.png \
	right.png \
	save.png \
	sep.png \
	sm-frowney2.png \
	sm-frowney.png \
	sm-notsmiley2.png \
	sm-notsmiley.png \
	sm-ohno.png \
	sm-smiley2.png \
	sm-smiley.png \
	sm-wink2.png \
	sm-wink.png \
	signin.png \
	trash2.png \
	uncancel.png \
	sqwebmail.css

HELP=wikifmt.html

noinst_DATA=$(IMAGES) $(HELP) filelist
EXTRA_DIST=$(IMAGES) $(HELP)

filelist: Makefile
	echo $(IMAGES) $(HELP) >filelist
