dnl Process this file with autoconf to produce a configure script.
dnl configure.in,v 1.1 2000/05/24 17:08:11 mrsam Exp

dnl Copyright 2000-2007 Double Precision, Inc.  See COPYING for
dnl distribution information.

AC_INIT(sqwebmail-images,0.10, [courier-users@lists.sourceforge.net])

>confdefs.h  # Kill PACKAGE_ macros

AC_CONFIG_SRCDIR(folders.png)
AC_CONFIG_AUX_DIR(../../..)
AM_INIT_AUTOMAKE([foreign no-define])

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_OUTPUT(Makefile)
